Fix layout overflow on small devices

--- a/_sass/fix-analytics/form.scss
+++ b/_sass/fix-analytics/form.scss
@@ -18,5 +18,6 @@
     border-radius: $border-radius;
 }
 .input--short {
-    width: 10rem;
+    width: 100%;
+    max-width: 10rem;
 }
